tests/semantic_cases/invalid/undeclared_assignment_target.ob0
(* INVALID: assignment target symbol is not declared *)
MODULE Main;
BEGIN
  y := 1;
END Main.
